--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@fullcalendar/interaction": "^6.1.6",
     "@fullcalendar/list": "^6.1.5",
     "@fullcalendar/react": "^6.1.6",
+    "@fullcalendar/timegrid": "^6.1.6",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.12.0",
     "@mui/x-data-grid": "^6.2.0",
