--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -2,6 +2,6 @@ server {
     listen 80;
     server_name  localhost;
     location /* {
-      try_files $uri $uri/ /index.html
+      try_files $uri $uri/ /index.html;
     }
 }
