--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,7 +1,7 @@
 server {
     listen 80;
     server_name  localhost;
-    location /* {
+    location / {
       try_files $uri $uri/ /index.html;
     }
 }
